#363: Rework the checks for duplicate use of specific method signature annotations.